--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -228,6 +228,13 @@
   text-align: right;
   font-size: 16px;
 }
+.tm-clinic-subtitle a {
+  text-decoration: none;
+  font-size: 14px;
+}
+.tm-clinic-subtitle a:hover { 
+  color: #1772a7;
+}
 
 .form-box {
   margin: 1rem 0;
