clinic services link for clinic panel

--- a/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
@@ -116,7 +116,7 @@
               </div>
             </div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <a href="/panel/clinic-detail"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
@@ -127,29 +127,37 @@
           </form>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-          <div class="tm-section-title tm-clinic-subtitle mt-1">Bu Adımı Atla</div>
+          <div class="tm-section-title tm-clinic-subtitle mt-1"><a href="./clinic-services.html">Bu Adımı Atla</a></div>
 
           <!--======= INFORMATION CARD =====-->
+
           <div class="tm-box-info">
             <div class="tm-box-top">
-              <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
-              <div class="tm-box-title">Bu adımları atlamanızı önermiyoruz.</div>
-            </div>
-            <div class="tm-box-bottom">
-              <div>Bu bilgileri dilediğiniz gibi sonra doldurabilirsiniz fakat Dialysing.com olarak tüm bilgileri eksiksiz ve sırasıyla doldurmanızı ziyaretçilerinizin dikkatini daha fazla çekebilmeniz adına öneriyoruz</div>
-            </div>
-          </div>
-          <!--======= INFORMATION CARD =====-->
-          <div class="tm-box-info">
-            <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Bilgileri daha sonrasında değiştirebiliyor muyum?</div>
             </div>
+            </div>
+            <!--======= INFORMATION CARD =====-->
+            <div class="tm-box-bottom">
+              <div>Bu bilgileri dilediğiniz gibi sonra doldurabilirsiniz fakat Dialysing.com olarak tüm bilgileri eksiksiz ve sırasıyla doldurmanızı ziyaretçilerinizin dikkatini daha fazla çekebilmeniz adına öneriyoruz</div>
+            </div>
+          </div> 
+
+          <div class="tm-box-info">
+            <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
+              <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
+              <div class="tm-box-title">Bilgileri daha sonrasında değiştirebiliyor muyum?</div>
+            </div>
+            </div>
+            <!--======= INFORMATION CARD =====-->
             <div class="tm-box-bottom">
               <div>Bu bilgileri merkezinizi listeledikten sonra güncelleyebilir veya değiştirebilirsiniz. Bu bilgilerin doğru girilmesi hastalarınızın merkezinize daha rahatça ulaşabilmesi içindir.</div>
               <div>Lütfen merkezinizde sağlamadığınız hizmetleri bu listeden seçmeyiniz.</div>
             </div>
-          </div>
+          </div>   
+          
         </div>
       </div>
     </div>
