--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -29,7 +29,7 @@
           <div class="tm-section-title tm-clinic-title">Merkez Sağlık Çalışanları</div>
           <form class="tm-form-wide" action="/panel/clinic-summary" method="GET">
             <div class="form-box">
-              <div class="title">MSağlık Çalışanı Adı Soyadı</div>
+              <div class="title">Sağlık Çalışanı Adı Soyadı</div>
               <div class="form-group">
                 <input type="text" class="form-control" id="center-name" placeholder="Sağlık Çalışanı Adı Soyadı" />
               </div>
