--- a/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
@@ -32,41 +32,45 @@
               <div class="title">Yurtiçi Hastalar İçin</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="SGK Anlaşması İle" name="paymentTypes" id="paymentTypes" />
-                <label class="form-check-label selected" for="paymentTypes"> SGK Anlaşması İle </label>
+                <label class="form-check-label" for="paymentTypes"> SGK Anlaşması İle </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Banka Sosyal Sigortalı Anlaşması" name="paymentTypes" id="paymentTypes" />
-                <label class="form-check-label" for="paymentTypes"> Banka Sosyal Sigortalı Anlaşması </label>
+                <input class="form-check-input" type="checkbox" value="Banka Sosyal Sigortalı Anlaşması" name="paymentTypes" id="paymentTypes1" />
+                <label class="form-check-label" for="paymentTypes1"> Banka Sosyal Sigortalı Anlaşması </label>
               </div>
               <div class="inner-checkbox">
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="Garanti Bankası" name="paymentTypes" id="paymentTypes" />
-                  <label class="form-check-label selected" for="paymentTypes"> Garanti Bankası </label>
+                  <input class="form-check-input" type="checkbox" value="Garanti Bankası" name="paymentTypes" id="paymentTypes12" />
+                  <label class="form-check-label" for="paymentTypes12"> Garanti Bankası </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="Ziraat Bankası" name="paymentTypes" id="paymentTypes" />
-                  <label class="form-check-label selected" for="paymentTypes"> Ziraat Bankası </label>
+                  <input class="form-check-input" type="checkbox" value="Ziraat Bankası" name="paymentTypes" id="paymentTypes13" />
+                  <label class="form-check-label" for="paymentTypes13"> Ziraat Bankası </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="Akbank" name="paymentTypes" id="paymentTypes" />
-                  <label class="form-check-label selected" for="paymentTypes"> Akbank </label>
+                  <input class="form-check-input" type="checkbox" value="Akbank" name="paymentTypes" id="paymentTypes14" />
+                  <label class="form-check-label" for="paymentTypes14"> Akbank </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="Yapıkredi" name="paymentTypes" id="paymentTypes" />
-                  <label class="form-check-label selected" for="paymentTypes"> Yapıkredi </label>
+                  <input class="form-check-input" type="checkbox" value="Yapıkredi" name="paymentTypes" id="paymentTypes15" />
+                  <label class="form-check-label" for="paymentTypes15"> Yapıkredi </label>
                 </div>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Yeşilkart Sigortası Anlaşması" name="paymentTypes" id="paymentTypes" />
-                <label class="form-check-label" for="paymentTypes"> Yeşilkart Sigortası Anlaşması </label>
+                <input class="form-check-input" type="checkbox" value="Yeşilkart Sigortası Anlaşması" name="paymentTypes" id="paymentTypes2" />
+                <label class="form-check-label" for="paymentTypes2"> Yeşilkart Sigortası Anlaşması </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Özel Sağlık Sigortası İle" name="paymentTypes" id="paymentTypes" />
-                <label class="form-check-label" for="paymentTypes"> Özel Sağlık Sigortası İle </label>
+                <input class="form-check-input" type="checkbox" value="Özel Sağlık Sigortası İle" name="paymentTypes" id="paymentTypes3" />
+                <label class="form-check-label" for="paymentTypes3"> Özel Sağlık Sigortası İle </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Diğer" name="paymentTypes" id="paymentTypes" />
-                <label class="form-check-label" for="paymentTypes"> Diğer </label>
+                <input class="form-check-input" type="checkbox" value="Diğer" name="paymentTypes" id="paymentTypes4" />
+                <label class="form-check-label" for="paymentTypes4"> Diğer </label>
+              </div>
+              <div class="form-group">
+                <label for="domesticPayment">Yurtiçi Seans Ücreti</label>
+                <input type="text" class="form-control" id="domesticPayment" name="domesticPayment" value="20 TL" placeholder="Yurtiçi Seans Ücreti" />
               </div>
               <!-- <div class="form-group explanation">
                 <input type="text" class="form-control" id="explanation1" placeholder="Açıklayınız" />
@@ -76,7 +80,7 @@
               <div class="title">Diyaliz Merkeziniz</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Özel Merkez </label>
+                <label class="form-check-label" for="flexCheckChecked"> Özel Merkez </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
@@ -98,26 +102,30 @@
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="Yurtdışı Sigortasından Direk Tahsilat" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes" checked />
-                <label class="form-check-label selected" for="abroadPatientPaymentTypes"> Yurtdışı Sigortasından Direk Tahsilat </label>
+                <label class="form-check-label" for="abroadPatientPaymentTypes"> Yurtdışı Sigortasından Direk Tahsilat </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Kredi Kartı İle Tahsilat" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes" />
-                <label class="form-check-label" for="abroadPatientPaymentTypes"> Kredi Kartı İle Tahsilat </label>
+                <input class="form-check-input" type="checkbox" value="Kredi Kartı İle Tahsilat" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes1" />
+                <label class="form-check-label" for="abroadPatientPaymentTypes1"> Kredi Kartı İle Tahsilat </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Nakit Olarak Seans Sonrası Tahsilat" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes" />
-                <label class="form-check-label" for="abroadPatientPaymentTypes"> Nakit Olarak Seans Sonrası Tahsilat </label>
+                <input class="form-check-input" type="checkbox" value="Nakit Olarak Seans Sonrası Tahsilat" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes2" />
+                <label class="form-check-label" for="abroadPatientPaymentTypes2"> Nakit Olarak Seans Sonrası Tahsilat </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Diğer" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes" />
-                <label class="form-check-label" for="abroadPatientPaymentTypes"> Diğer </label>
+                <input class="form-check-input" type="checkbox" value="Diğer" name="abroadPatientPaymentTypes" id="abroadPatientPaymentTypes3" />
+                <label class="form-check-label" for="abroadPatientPaymentTypes3"> Diğer </label>
+              </div>
+              <div class="form-group">
+                <label for="abroadPayment">Yurtdışı Seans Ücreti</label>
+                <input type="text" class="form-control" id="abroadPayment" name="abroadPayment" value="20 $" placeholder="Yurtdışı Seans Ücreti" />
               </div>
               <!-- <div class="form-group explanation">
                 <input type="text" class="form-control" id="explanation2" placeholder="Açıklayınız" />
               </div> -->
             </div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html"
+              <a href="/panel/clinic-services"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
