--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -103,7 +103,7 @@
         </div>
         <!--======= INFORMATION CARD =====-->
         <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
-          <div class="tm-section-title tm-clinic-subtitle">Bu Adımı Atla</div>
+          <div class="tm-section-title tm-clinic-subtitle"><a href="#">Bu Adımı Atla</a></div>
           <div class="tm-box-info">
             <div class="tm-box-top">
               <div class="col d-flex align-items-start">
