--- a/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
@@ -71,26 +71,7 @@
               <div class="form-group">
                 <label for="domesticPayment">Yurtiçi Seans Ücreti</label>
                 <input type="text" class="form-control" id="domesticPayment" name="domesticPayment" value="20 TL" placeholder="Yurtiçi Seans Ücreti" />
-              </div>
-              <!-- <div class="form-group explanation">
-                <input type="text" class="form-control" id="explanation1" placeholder="Açıklayınız" />
-              </div> -->
-            </div>
-            <!-- <div class="form-box">
-              <div class="title">Diyaliz Merkeziniz</div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label" for="flexCheckChecked"> Özel Merkez </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Kamuya Ait Diyaliz Merkezi </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Üniversite Diyaliz Merkezi </label>
-              </div>
-            </div> -->
+              </div> 
             <div class="form-box">
               <div class="title">Yurtdışı Hastalar İçin</div>
               <div class="form-group not-border checkbox">
@@ -119,10 +100,7 @@
               <div class="form-group">
                 <label for="abroadPayment">Yurtdışı Seans Ücreti</label>
                 <input type="text" class="form-control" id="abroadPayment" name="abroadPayment" value="20 $" placeholder="Yurtdışı Seans Ücreti" />
-              </div>
-              <!-- <div class="form-group explanation">
-                <input type="text" class="form-control" id="explanation2" placeholder="Açıklayınız" />
-              </div> -->
+              </div> 
             </div>
             <div class="tm-button-next left">
               <a href="/panel/clinic-services"
@@ -163,16 +141,18 @@
           </div>
           <div class="tm-box-info">
             <div class="tm-box-top">
+              <div class="col d-flex align-items-start">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
               <div class="tm-box-title">Yurtdışından Gelen Tatil Rezervasyonları İçin</div>
             </div>
+          </div>
             <div class="tm-box-bottom">
               <div>
                 Dialysing.com merkezimize yurtdışından gelecek olan tatil diyalizi rezervasyonlarından tarafınızca kabul edilerek gerçekleştirilecek olan her bir tatil diyaliz seansı için merkez sözleşmenizde yer alan Hizmet Bedeli faturalandırma tahsilatı yapma hakkına sahiptir. Sadece rezervasyonu yapılan tedavinin merkezce gerçekleştirilmesi halinde rezervasyon hizmet bedeli ödenir. Hizmet bedeli dışında dialysing.com’a herhangi bir komisyon ödemesi yapmazsınız; bu bedel dışında.. 2021 yılı
                 yurtdışı tatil diyalizi rezervasyonu hizmet bedeli 9 Euro’dur ve ilk 3 rezervasyonda hizmet bedeli yoktur. Dialysing.com'a bunun dışında ayırca herhangi bir komisyon veya masraf ödemesi yapmazsınız
               </div>
             </div>
-          </div>
+          </div> 
         </div>
       </div>
     </div>
