--- a/src/views/clinic-panel/pages/add-clinic/clinic-summary.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-summary.ejs
@@ -31,7 +31,9 @@
             <img src="../user/img/clinic/center-ss.png" alt="Center Screenshot" />
           </div>
           <div class="tm-section-title tm-clinic-title mt-5">Merkezinizin Listelenme Ekranı</div>
-          <div class="tm-color-shadow">Merkezinizin Dialysing.com üzerinde listelenirken nasıl görüntüleceğini görmektesiniz. Dilediğiniz zaman merkezinizi öne çıkarılan merkezler sıralamasında gösterebilirsiniz. Detaylı bilgi aşağıda yer almaktadır.</div>
+          <div class="tm-color-shadow">Merkezinizin Dialysing.com üzerinde listelenirken nasıl görüntüleceğini
+            görmektesiniz. Dilediğiniz zaman merkezinizi öne çıkarılan merkezler sıralamasında gösterebilirsiniz.
+            Detaylı bilgi aşağıda yer almaktadır.</div>
           <div class="clinic-screenshot-mini">
             <img src="../user/img/clinic/center-list-ss.png" alt="Center List Screenshot" class="list-img" />
             <div class="clinic-screenshot-mini-inner mt-5">
@@ -39,18 +41,27 @@
               <div class="tm-color-shadow">Sözleşmenizi mail olarak gönderiyor olacağız.</div>
               <img src="../user/img/clinic/center-agg-ss.png" alt="Center Agreement Screenshot" class="agg-img" />
               <div class="tm-button-next left">
-                <a href="./clinic-doctors.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
+                <a href="./clinic-doctors.html" class="btn-forth">
+                  <img src="../user/img/icons/left-arrow.png"
+                    alt="Icon Left" /></a>
                 <a href="/panel/clinic-save" class="btn-second">Kaydet</a>
               </div>
               <div class="form-group checkbox checkbox-aggreement">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label agreement" for="flexCheckChecked"> Bu kaydetmekle merkezimizin diyaliz tedavisi gerçekleştirmek üzere gereken her türlü yasal izne sahip olduğunu ve bu merkezi / şirketi temsile yetkili / yetkilendirilmiş kişi olduğumu kabul ve beyan ederim. </label>
+                <label class="form-check-label agreement" for="flexCheckChecked"> Bu kaydetmekle merkezimizin diyaliz
+                  tedavisi gerçekleştirmek üzere gereken her türlü yasal izne sahip olduğunu ve bu merkezi / şirketi
+                  temsile yetkili / yetkilendirilmiş kişi olduğumu kabul ve beyan ederim. </label>
               </div>
               <div class="form-group checkbox checkbox-aggreement">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label agreement" for="flexCheckChecked"> Şartlar ve Koşullar, Gizlilik Politikası ve Kişisel Verilerin İşlenmesine İlişkin Onay’ı Dialysing.com hizmet sözleşmesini okudum ve kabul ediyorum. </label>
+                <label class="form-check-label agreement" for="flexCheckChecked"> Şartlar ve Koşullar, Gizlilik
+                  Politikası ve Kişisel Verilerin İşlenmesine İlişkin Onay’ı Dialysing.com hizmet sözleşmesini okudum ve
+                  kabul ediyorum. </label>
               </div>
-              <div class="alert alert-danger" role="alert"><img src="../user/img/clinic/icons/error-circle-red.png" alt="Error Circle Red Icon" />Kliniğinizin web sitemizde yayınlanması öncesi yasa ve mevzuatla ilgili çeşitli gereklere uygunluk açısından size ve kliniğinize ilişkin aldığımız bilgileri doğrulamamız gerekmektedir. Doğrulama işlemi birkaç saat ile birkaç gün arasında süre alabilmektedir.</div>
+              <div class="alert alert-danger" role="alert"><img src="../user/img/clinic/icons/error-circle-red.png"
+                  alt="Error Circle Red Icon" />Kliniğinizin web sitemizde yayınlanması öncesi yasa ve mevzuatla ilgili
+                çeşitli gereklere uygunluk açısından size ve kliniğinize ilişkin aldığımız bilgileri doğrulamamız
+                gerekmektedir. Doğrulama işlemi birkaç saat ile birkaç gün arasında süre alabilmektedir.</div>
             </div>
           </div>
         </div>
