--- a/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
@@ -69,9 +69,28 @@
                 <label class="form-check-label" for="paymentTypes4"> Diğer </label>
               </div>
               <div class="form-group">
-                <label for="domesticPayment">Yurtiçi Seans Ücreti</label>
-                <input type="text" class="form-control" id="domesticPayment" name="domesticPayment" value="20 TL" placeholder="Yurtiçi Seans Ücreti" />
-              </div> 
+                <label for="abroadPayment">Yurtiçi Seans Ücreti</label>
+                <input type="text" class="form-control" id="abroadPayment" name="abroadPayment" value="20 TL" placeholder="Yurtiçi Seans Ücreti" />
+              </div>
+              <!-- <div class="form-group explanation">
+                <input type="text" class="form-control" id="explanation1" placeholder="Açıklayınız" />
+              </div> -->
+            </div>
+            <!-- <div class="form-box">
+              <div class="title">Diyaliz Merkeziniz</div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
+                <label class="form-check-label" for="flexCheckChecked"> Özel Merkez </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
+                <label class="form-check-label" for="flexCheckChecked"> Kamuya Ait Diyaliz Merkezi </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
+                <label class="form-check-label" for="flexCheckChecked"> Üniversite Diyaliz Merkezi </label>
+              </div>
+            </div> -->
             <div class="form-box">
               <div class="title">Yurtdışı Hastalar İçin</div>
               <div class="form-group not-border checkbox">
@@ -99,8 +118,11 @@
               </div>
               <div class="form-group">
                 <label for="abroadPayment">Yurtdışı Seans Ücreti</label>
-                <input type="text" class="form-control" id="abroadPayment" name="abroadPayment" value="20 $" placeholder="Yurtdışı Seans Ücreti" />
-              </div> 
+                <input type="text" class="form-control" id="abroadPayment" name="abroadPayment" value="20$" placeholder="Yurtdışı Seans Ücreti" />
+              </div>
+              <!-- <div class="form-group explanation">
+                <input type="text" class="form-control" id="explanation2" placeholder="Açıklayınız" />
+              </div> -->
             </div>
             <div class="tm-button-next left">
               <a href="/panel/clinic-services"
