--- a/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
@@ -22,7 +22,7 @@
   <!--======= PERSONEL INFORMATION =====-->
   <div id="section-ii" class="tm-margin-3 py-5 my-5">
     <div class="container">
-      <div class="tm-section-title tm-clinic-title">Kişisel Bilgileriniz</div>
+      <div class="tm-section-title tm-clinic-title">Kİşİsel Bİlgİlerİnİz</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <form class="tm-form-wide" action="/panel/choose-center" method="POST">
@@ -49,13 +49,7 @@
                 </select>
               </div>
             </div>
-            <div class="tm-button-next left">
-              <!-- <a href=""
-                ><button type="button" class="btn btn-outline-secondary">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-                  </svg></button
-              ></a> -->
+            <div class="tm-button-next left"> 
               <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
           </form>
@@ -63,7 +57,7 @@
 
         <!--======= WARNING CARD =====-->
         <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
-          <div class="tm-box-info">
+          <div class="tm-box-info mt-1">
             <div class="tm-box-top">
               <div class="col d-flex align-items-start">
                 <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" /></div>
