--- a/src/views/user/partials/navbar.ejs
+++ b/src/views/user/partials/navbar.ejs
@@ -75,7 +75,7 @@
             </li>
             <li class="nav-item question mt-3 mb-3">
               <img src="../user/img/icons/question.png" alt="Icons Question" />
-              <div class="is-clinic">Klinik Hesabınız Var Mı?</div>
+              <div class="is-clinic mr-3">Klinik Hesabınız Var Mı?</div>
             </li>
             <li class="nav-item mt-3 mb-3">
               <a href="/panel/choose-personel" class="nav-link btn-third">Giriş Yap</a>
