--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -13,7 +13,7 @@
               <div class="tm-color-shadow">Cevizli, 44, Çifteler Cd., 34865 Kartal/İstanbul</div>
             </div>
             <div class="tm-display-flex">
-              <div class="tm-color-dark">Düzenle</div>
+              <!-- <div class="tm-color-dark">Düzenle</div> -->
             </div>
           </div>
           <div class="row px-2">
@@ -179,8 +179,54 @@
           <div class="admin-text">Merkezinizin görünürlüğünü çeşitli seçenekler ile arttırmanız mümkün. Merkezinize 30
             KM uzaklıkta olan diğer merkezlerin görüntülenme oranları sizden %30 daha fazla durumdadır.</div>
           <form>
-            <div class="visibilty mb-2">Görünürlük Tarihi</div>
-            <span>
+            <div class="visibilty mb-1">Görünürlük Başlangıç Tarihi</div> 
+            <div class="adviserment mb-3 mr-3">
+            <select class="custom-select">
+              <option selected>Ay Seçin</option>
+              <option value="1">Ocak</option>
+              <option value="2">Şubat</option>
+              <option value="3">Mart</option>
+              <option value="4">Nisan</option>
+              <option value="5">Mayıs</option>
+              <option value="6">Haziran</option>
+              <option value="7">Temmuz</option>
+              <option value="8">Ağustos</option>
+              <option value="9">Eylül</option>
+              <option value="10">Ekim</option>
+              <option value="11">Kasım</option>
+              <option value="12">Aralık</option>
+            </select>
+            <select class="custom-select">
+              <option selected>Yıl Seçin</option>
+              <option value="13">2022</option>
+              <option value="14">2023</option>
+            </select>
+          </div>
+          <div class="visibilty mb-1">Görünürlük Bitiş Tarihi</div>
+          <div class="adviserment mb-3">
+            <select class="custom-select">
+              <option selected>Ay Seçin</option>
+              <option value="1">Ocak</option>
+              <option value="2">Şubat</option>
+              <option value="3">Mart</option>
+              <option value="4">Nisan</option>
+              <option value="5">Mayıs</option>
+              <option value="6">Haziran</option>
+              <option value="7">Temmuz</option>
+              <option value="8">Ağustos</option>
+              <option value="9">Eylül</option>
+              <option value="10">Ekim</option>
+              <option value="11">Kasım</option>
+              <option value="12">Aralık</option>
+            </select>
+            <select class="custom-select">
+              <option selected>Yıl Seçin</option>
+              <option value="13">2022</option>
+              <option value="14">2023</option>
+            </select>
+          </div>
+
+            <!-- <span>
               <label for="day">Day:</label>
               <select name="day" id="day"></select>
             </span>
@@ -191,7 +237,7 @@
             <span>
               <label for="year">Year:</label>
               <select name="year" id="year">Year:</select>
-            </span>
+            </span> -->
           </form>
 
         </div>
